--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,9 @@
+# System Cruft
+# ================================================
+.DS_Store
+*.swp
+*.swo
+
 # secret stuff
 # ================================================
 secrets.json
